--- a/web/style.css
+++ b/web/style.css
@@ -1,6 +1,7 @@
 .start {
     background-image: url('img/real-estate-agent.png');
     min-height: 100vh;
+    background-size: cover;
 }
 
 @media (min-width: 768px) {
@@ -52,3 +53,18 @@
     max-width: 100%;
     margin: 0 auto;
 }
+
+/*dolgok*/
+
+.fw-bold {
+    color: rgb(217, 243, 240);
+}
+.float-end {
+    color: rgb(217, 243, 240);
+}
+
+.nav-link.active{
+    color: rgb(71, 71, 150);
+    font-weight: bold;
+}
+
